Connection Banner: Fix misaligned lock icon by centering all icons

--- a/scss/organisms/_banners.scss
+++ b/scss/organisms/_banners.scss
@@ -334,6 +334,7 @@
 		width: rem( 20px );
 		height: rem( 20px );
 		padding: rem( 4px );
+		text-align: center;
 	}
 
 	// svg fill swaps
